feat: added skeleton html template

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="This is a simple webpage displaying 'Hello World'">
-    <title>Hello World</title>
+    <meta name="description" content="Instone; an effective markdown editor.">
+    <title>Instone</title>
+    <link rel="stylesheet" href="main.css">
 </head>
-
 <body>
-    <h1>Hello World!</h1>
+    <header role="banner">
+        <!--Header Modules-->
+    </header>
+    <div class="container">
+        <sidebar role="navigation" aria-label="Sidebar">
+            <!--Sidebar Modules-->
+        </sidebar>
+        <homepage role="main">
+            <!--Homepage Modules-->
+        </homepage>
+    </div>
 </body>
-
 </html>
