--- a/application/web/index.html
+++ b/application/web/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Instone; an effective markdown editor.">
     <title>Instone</title>
     <link rel="stylesheet" href="main.css">
+    <!-- 3 Button Icon using <i class='fa fa-ellipsis-v'></i>-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header role="banner">
@@ -14,6 +16,16 @@
     <div class="container">
         <sidebar role="navigation" aria-label="Sidebar">
             <!--Sidebar Modules-->
+            <div class="sidebar-module">
+                <button class="new-journal">
+                    <span>New Journal</span>
+                    <img src="assets/journal-icon.png" alt="Journal Icon" class="journal-icon">
+                </button>
+                <div class="journal-entry">
+                    <span>My Journal</span>
+                    <i class='fa fa-ellipsis-v'></i>
+                </div>
+            </div>
         </sidebar>
         <homepage role="main">
             <!--Homepage Modules-->
