fix: hotfix for sidebar view

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,23 @@
     <title>Instone</title>
     <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-    <header role="banner">
-        <!--Header Modules-->
-    </header>
-    <div class="container">
+    <div id='app-wrapper'>
         <sidebar role="navigation" aria-label="Sidebar">
             <!--Sidebar Modules-->
         </sidebar>
-        <homepage role="main">
-            <!--Homepage Modules-->
-        </homepage>
+        <div class="container">
+            <header role="banner">
+                <!--Header Modules-->
+                
+            </header>
+            <homepage role="main">
+                <!--Homepage Modules-->
+            </homepage>
+        </div>
     </div>
+
 </body>
+
 </html>
