update: updated index.html and main.css for header updates

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -29,7 +29,8 @@
         <div class="container">
             <header role="banner">
                 <!--Header Modules-->
-                
+                <img src = "assets/instone-rock.svg" alt="Rock Icone" class="rock-icon" height="25px" width="25px" >
+                Instone
             </header>
             <homepage role="main">
                 <!--Homepage Modules-->
