Added a scroll and hover feature for the 3 dots

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Instone; an effective markdown editor.">
     <title>Instone</title>
     <link rel="stylesheet" href="main.css">
+    <script src="web.js"></script>
     <!-- 3 Button Icon using <i class='fa fa-ellipsis-v'></i>-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -20,6 +21,10 @@
                     <span>New Journal</span>
                     <img src="assets/journal-icon.png" alt="Journal Icon" class="journal-icon">
                 </button>
+                <div class="journal-entry">
+                    <span>My Journal</span>
+                    <i class='fa fa-ellipsis-v'></i>
+                </div>
                 <div class="journal-entry">
                     <span>My Journal</span>
                     <i class='fa fa-ellipsis-v'></i>
