BREAKING CHANGE: implemented linting for HTML & provided additional CSS

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -17,13 +17,16 @@
         <sidebar role="navigation" aria-label="Sidebar">
             <!--Sidebar Modules-->
             <div class="sidebar-module">
+                <button class="sidebar-drawer">
+                    <img src="./assets/drawer.svg"></img>
+                </button>
                 <button class="new-journal">
                     <span>New Journal</span>
-                    <img src="assets/journal-icon.png" alt="Journal Icon" class="journal-icon">
+                    <img src="assets/journal-icon.svg" alt="Journal Icon" class="journal-icon">
                 </button>
                 <div class="journal-entry">
                     <span>My Journal</span>
-                    <i class='fa fa-ellipsis-v'></i>
+                    <img class='vdots' src='./assets/vdots.svg'></img>
                 </div>
                 <div class="journal-entry">
                     <span>My Journal</span>
@@ -34,8 +37,8 @@
         <div class="container">
             <header role="banner">
                 <!--Header Modules-->
-                <img src = "assets/instone-rock.svg" alt="Rock Icone" class="rock-icon" height="25px" width="25px" >
-                Instone
+                <img src="assets/instone-rock.svg" alt="Rock Icon" class="rock-icon" height="25px" width="25px" >
+                <p>Instone</p>
             </header>
             <homepage role="main">
                 <!--Homepage Modules-->
