[feat] Created save and cancel changes buttons

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -38,6 +38,14 @@
             <homepage role="main">
                 <!--Homepage Modules-->
             </homepage>
+            <entry class="save-or-exit">
+                <button class = 'secondary'>
+                    <span>Cancel Changes</span>
+                </button>
+                <button class = 'primary'>
+                    <span>Save Entry</span>
+                </button>
+            </entry>
         </div>
     </div>
 
