updated after git pull

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="journal-entry">
                     <span>My Journal</span>
-                    <i class='fa fa-ellipsis-v'></i>
+                    <img class='vdots' src='./assets/vdots.svg'></img>
                 </div>
             </div>
         </sidebar>
