updated: popup window for cancel changes

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -45,13 +45,15 @@
                 </button>
                 <div id="myPopup" class="popup">
                     <div class="popup-content">
-                        <span>Discard Unsaved Entry Changes?</span>
-                        <button id="closePopup" class="primary">
-                            Cancel
-                        </button>
-                        <button id="" class="secondary">
-                            Discard
-                        </button>
+                        <span>Discard unsaved entry changes?</span>
+                        <div class="discardCancelContainer">
+                            <button id="" class="secondary">
+                                Discard
+                            </button>
+                            <button id="closePopup" class="primary">
+                                Cancel
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <button class='primary'>
