--- a/application/web/index.html
+++ b/application/web/index.html
@@ -8,8 +8,6 @@
     <title>Instone</title>
     <link rel="stylesheet" href="main.css">
     <script src="web.js" type="module"></script>
-    <!-- 3 Button Icon using <i class='fa fa-ellipsis-v'></i>-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="assets/scripts/entry-title-script.js"> </script>
 </head>
 
@@ -28,7 +26,7 @@
                 <div class="journal-entry">
                     <span>My Journal</span>
                     <button class="edit-journal" id="edit-journal">
-                        <i class='fa fa-ellipsis-v'></i>
+                        <img src="./assets/vdots.svg">
                     </button>
                 </div>
             </div>
