refactor: removed unused js file, moved .js file to web/scripts, and added 3 dots in entry page

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="main.css">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <script src="web.js" type="module"></script>
-    <script src="assets/scripts/entry-title-script.js"> </script>
+    <script src="../web/scripts/entry-title-script.js"> </script>
     <script src="web.js"></script>
 </head>
 
@@ -53,7 +53,7 @@
                             <div id="myPopup" class="popup">
                                 <div class="popup-content">
                                     <span>Discard unsaved entry changes?</span>
-                                    <div class="discardCancelContainer">
+                                    <div class="discard-cance-container">
                                         <button id="cancel-note" class="secondary">
                                             Discard
                                         </button>
@@ -65,6 +65,9 @@
                             </div>
                             <button id="save-entry" class="primary">
                                 <span>Save Entry</span>
+                            </button>
+                            <button class="three-dots-entry">
+                                <img src="./assets/vdots-entry-black.png" width="24" height="24">
                             </button>
                         </div>
                     </div>
