feature: added 3 dots html and css to entry page

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -60,6 +60,10 @@
                     <button class="primary">
                         <span>Save Entry</span>
                     </button>
+                    
+                    <button class="three-dots">
+                        <img src="./assets/vdots-grey.svg" alt="Three Dots" class="dots-icon">
+                    </button>
                 </div>
             </entry>
             
