feat: completed backend API for journals

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="main.css">
     <script src="web.js" type="module"></script>
     <script src="assets/scripts/entry-title-script.js"> </script>
+    <script src="JournalAPI.js"></script>
     <script src="web.js"></script>
 </head>
 
