feat: html css homepage entry skeleton

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -42,7 +42,18 @@
                         <label class="new_entry">Create New Entry</label>
                     </div>
                 </button>
-
+                <div class = "home-list">
+                    <div class="home-entry-descriptor">
+                        <span>Entry Name</span>
+                        <span>Date Logged</span>
+                    </div>
+                    <button class="home-single-entry">
+                        <span class="home-entry-name">My Journal</span>
+                        <span>Date Created</span>
+                        <img src="/application/web/assets/vdots-entry-black.png">
+                    </button>
+                </div>
+                
                 <!-- Entrypage Module -->
                 <div class="title-textarea">
                     <div class="cancel-save-container">  
