--- a/application/web/index.html
+++ b/application/web/index.html
@@ -47,13 +47,20 @@
                         <span>Entry Name</span>
                         <span>Date Logged</span>
                     </div>
-                    <button class="home-single-entry">
-                        <span class="home-entry-name">My Journal</span>
-                        <span>Date Created</span>
-                        <img src="/application/web/assets/vdots-entry-black.png">
-                    </button>
+                    <div class="home-single-entry">
+                        <button class="home-single-entry-button">
+                            <span class="home-entry-name">My Journal</span>
+                            <span>Date Created</span>
+                            <!-- <img src="/application/web/assets/vdots-entry-black.png"> -->
+                            <!-- <img src="../web/assets/vdots-entry-black.png" width="20" height="20">                     -->
+                        </button>
+                        <button class="three-dots-entry">
+                            <img src="../web/assets/vdots-entry-black.png">                    
+                        </button>
+                    </div>
+                    
                 </div>
-                
+
                 <!-- Entrypage Module -->
                 <div class="title-textarea">
                     <div class="cancel-save-container">  
