--- a/application/web/index.html
+++ b/application/web/index.html
@@ -43,6 +43,10 @@
                     </div>
                 </button>
 
+                <div class="no-entry-text">
+                    <p>You have no Journal Entries</p>
+                    <p>Click "Create New Entry" on top to start your first entry.</p>
+                </div>
                 <!-- Entrypage Module -->
                 <div class="title-textarea">
                     <div class="cancel-save-container">  
