feat: added styling for Entry Name and Date Logged

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -44,8 +44,8 @@
                 </button>
                 <div class = "home-list">
                     <div class="home-entry-descriptor">
-                        <span>Entry Name</span>
-                        <span>Date Logged</span>
+                        <span style="font-family: 'Inter'">Entry Name</span>
+                        <span style="font-family: 'Inter'">Date Logged</span>
                     </div>
                     <div class="home-single-entry">
                         <button class="home-single-entry-button">
