style: updated font weight and size

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="no-entry-text">
-                    <p>You have no Journal Entries</p>
+                    <p style="font-weight: 500;">You have no Journal Entries</p>
                     <p>Click "Create New Entry" on top to start your first entry.</p>
                 </div>
                 <!-- Entrypage Module -->
