fix: merged main

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -46,8 +46,8 @@
                 </button>
                 <div class="home-list">
                     <div class="home-entry-descriptor">
-                        <span style="font-family: 'Inter'">Entry Name</span>
-                        <span style="font-family: 'Inter'">Date Logged</span>
+                        <span id="entry-name" style="font-family: 'Inter'">Entry Name</span>
+                        <span id="date-logged"style="font-family: 'Inter'">Date Logged</span>
                     </div>
                     <div class="home-single-entry">
                         <button class="home-single-entry-button">
@@ -60,7 +60,6 @@
                             <img src="../web/assets/vdots-entry-black.png">
                         </button>
                     </div>
-
                 </div>
 
                 <div id="no-entry-text">
