--- a/application/web/index.html
+++ b/application/web/index.html
@@ -35,6 +35,7 @@
                     <span>New Journal</span>
                     <img src="assets/journal-icon.svg" alt="Journal Icon" class="journal-icon">
                 </button>
+
             </div>
         </sidebar>
         <div class="container">
@@ -104,7 +105,7 @@
                                 <span>Save Entry</span>
                             </button>
                             <button id="three-dots-entry" class="three-dots">
-                                <img src="./assets/vdots-grey.svg" alt="Three Dots" class="dots-icon">
+                                <img src="./assets/vdots-grey.svg" alt="Three Dots" >
                             </button>
                             <div id="dropdown-menu-entry" class="dropdown-menu">
                                 <div class="dropdown-item" data-action="markdown">
