fix: attempt to fix lint error

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -144,7 +144,7 @@
                 
                 
                 <script src="./scripts/ajax/libs/codemirror/6.65.7/codemirror.min.js"></script>
-                <script src="./scripts/ajax/libs/marked/3.0.0/marked.min.js.js"></script>
+                <script src="./scripts/ajax/libs/marked/3.0.0/marked.min.js"></script>
                 <script src="./scripts/ajax/libs/codemirror/6.65.7/mode/markdown/markdown.min.js"></script>
                 <script src="./scripts/ajax/libs/codemirror/6.65.7/mode/gfm/gfm.min.js"></script>
                 <script src="./scripts/ajax/libs/codemirror/5.65.7/addon/mode/overlay.min.js"></script>
