feat: updated editor to not repeat add saves

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -124,6 +124,9 @@
                             <button id="save-entry" class="primary">
                                 <span>Save Entry</span>
                             </button>
+                            <button id="save-entry-only" class="primary">
+                                <span>Save Entry</span>
+                            </button>
                             <button id="editing-entry-vdots-button">
                                 <img class="editing-entry-vdots" src="./assets/vdots-grey.svg" alt="Three Dots">
                             </button>
