--- a/application/web/index.html
+++ b/application/web/index.html
@@ -38,9 +38,9 @@
                     <span>New Journal</span>
                     <img src="assets/journal-icon.svg" alt="Journal Icon" class="journal-icon">
                 </button>
-                <fieldset class="journal-list">
+                <div class="journal-list">
                     
-                </fieldset>
+                </div>
                 <!-- <div class = "journal">
                     <span>My Journal</span>
                     <button class="journal-dropdown-button">
