feat: clicking journal buttons will now load previous entries from storage

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -80,10 +80,10 @@
                     </div>
                 </div>
 
-                <!-- <div id="no-entry-text">
+                <div id="no-journal-text">
                     <b>You have no Journals</b>
                     <p>Create a new Journal with the "New Journal" button to the left.</p>
-                </div> -->
+                </div>
 
                 <div class="no-entry-text">
                     <!-- Text inside this div will be populated when a journal is created -->
