fix: fixed visual bugs for dropdown/journal

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -19,9 +19,9 @@
 
     <!-- Script -->
     <script src="web.js" type="module"></script>
-    <script src="scripts/entry-title-script.js"> </script>
+    <script src="scripts/editing-entry/entry-title-script.js"> </script>
+    <script src="scripts/editing-entry/editing-entry-dropdown.js"></script>
     <script src="JournalAPI.js"></script>
-    <script src="scripts/editing-entry-dropdown.js"></script>
     <script src="scripts/sidebar/sidebar.js" type="module"></script>
     <script src="scripts/sidebar/sidebar-dropdown.js" type="module"></script>
 </head>
@@ -48,7 +48,7 @@
                     <img src="./assets/addEntry-icon.png" alt="Edit Icon" class="dropdown-icon" width="24px"> Edit Journal Name
                 </div>
                 <div id="trash" class="sidebar-dropdown-item delete" >
-                    <img src="./assets/trashcan-red.svg" alt="Delete Icon" class="dropdown-icon"> Delete Entry
+                    <img src="./assets/trashcan-red.svg" alt="Delete Icon" class="dropdown-icon"> Delete Journal
                 </div>
             </div>
         </sidebar>
