--- a/application/web/index.html
+++ b/application/web/index.html
@@ -19,9 +19,9 @@
 
     <!-- Script -->
     <script src="web.js" type="module"></script>
-    <script src="scripts/editing-entry/entry-title-script.js"> </script>
-    <script src="scripts/editing-entry/editing-entry-dropdown.js"></script>
+    <script src="scripts/entry-title-script.js"> </script>
     <script src="JournalAPI.js"></script>
+    <script src="scripts/editing-entry-dropdown.js"></script>
     <script src="scripts/sidebar/sidebar.js" type="module"></script>
     <script src="scripts/sidebar/sidebar-dropdown.js" type="module"></script>
 </head>
@@ -38,9 +38,15 @@
                     <span>New Journal</span>
                     <img src="assets/journal-icon.svg" alt="Journal Icon" class="journal-icon">
                 </button>
-                <div class="journal-list">
+                <fieldset class="journal-list">
                     
-                </div>
+                </fieldset>
+                <!-- <div class = "journal">
+                    <span>My Journal</span>
+                    <button class="journal-dropdown-button">
+                        <img class = "journal-vdots" src="./assets/vdots-journal-white.svg">
+                    </button>
+                </div> -->
             </div>
 
             <div class="sidebar-dropdown-menu">
@@ -48,7 +54,7 @@
                     <img src="./assets/addEntry-icon.png" alt="Edit Icon" class="dropdown-icon" width="24px"> Edit Journal Name
                 </div>
                 <div id="trash" class="sidebar-dropdown-item delete" >
-                    <img src="./assets/trashcan-red.svg" alt="Delete Icon" class="dropdown-icon"> Delete Journal
+                    <img src="./assets/trashcan-red.svg" alt="Delete Icon" class="dropdown-icon"> Delete Entry
                 </div>
             </div>
         </sidebar>
