feat: editted more

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -82,10 +82,10 @@
 
                 <div class="homepage-dropdown-menu">
                     <div class="homepage-dropdown-item">
-                        <img src="./assets/addEntry-icon.png" alt="Edit Icon" class="dropdown-icon" width="24px"> Edit Entry Name
+                        <img src="./assets/addEntry-icon.png" alt="Edit Icon"  width="24px"> Edit Entry Name
                     </div>
-                    <div id="home-trash" class="sidebar-dropdown-item delete" >
-                        <img src="./assets/trashcan-red.svg" alt="Delete Icon" class="dropdown-icon"> Delete Entry
+                    <div id="home-trash" class="homepage-dropdown-item delete" >
+                        <img src="./assets/trashcan-red.svg" alt="Delete Icon"> Delete Entry
                     </div>
                 </div>
 
