feat: added delete entry functionality to editing entry page

--- a/application/web/index.html
+++ b/application/web/index.html
@@ -20,7 +20,7 @@
     <!-- Script -->
     <script src="web.js" type="module"></script>
     <script src="scripts/editing-entry/entry-title-script.js"> </script>
-    <script src="scripts/editing-entry/editing-entry-dropdown.js"></script>
+    <script src="scripts/editing-entry/editing-entry-dropdown.js" type="module"></script>
     <script src="JournalAPI.js"></script>
     <script src="scripts/sidebar/sidebar.js" type="module"></script>
     <script src="scripts/sidebar/sidebar-dropdown.js" type="module"></script>
